codepkg/objects/Validation_Rule_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error message to be displayed.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <referenceTo>SObject__mdt</referenceTo>
        <relationshipLabel>Validation Rule Configs</relationshipLabel>
        <relationshipName>Validation_Rule_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Validation Rule Config</label>
    <pluralLabel>Validation Rule Configs</pluralLabel>
</CustomObject>